# netsat-scrapper

./: .gitignore  Cargo.toml  README.md  netsat_data.json
src/: main.rs
