[package]
name = "netset_score_scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
scraper = "0.18.1"
serde = "1.0.196"
serde_json = "1.0.113"
thirtyfour = "0.31.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
